--- a/CSS/dashboardMediaQuery.css
+++ b/CSS/dashboardMediaQuery.css
@@ -143,7 +143,7 @@
         gap: 6px;
     }
 
-    .btn-usePoints {
+    .usePointsButton {
         width: 100%;
         justify-content: center;
     }
@@ -157,6 +157,12 @@
         flex-wrap: wrap;
         justify-content: center;
         gap: 16px;
+    }
+
+ 
+
+    .tierLink-SmallerScreens {
+        display: block;
     }
 
     /* -------------------- Footer -------------------- */
